Minor style fix for popup alignment.

--- a/gitb-ui/ui/src/styles/less/app.less
+++ b/gitb-ui/ui/src/styles/less/app.less
@@ -650,7 +650,7 @@ div.non-padded-alert div.alert {
 }
 .header-container {
     display: flex;
-	min-height: 64px;
+	min-height: 59px;
     position: relative;
     .header-logo-container {
         display: flex;
